--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </div>
 
         <div class="add-button-container">
-            <button id="button" type="button">Add Research Item</button>
+            <button id="add-button" type="button">Add Research Item</button>
         </div>
     </div>
 
 
-    <div class="items-section">
-        <div class="research-item">
+    <div class="items-section" id="items-section">
+        <!-- <div class="research-item">
             <div class="title-and-delete-container">
                 <a href="#">Website For NASA Data</a>
                 <i class="fa-solid fa-trash"></i>
@@ -31,15 +31,15 @@
             <div class="description-of-item">
                 <p>This website is for researching on UX Design principles. I love the way the research is done on the website</p>
             </div>
-        </div>
+        </div> -->
     </div>
 
 
 
-    <div class="modal-overlay">
+    <div class="modal-overlay" id="modal-overlay">
         <div class="modal">
             <div class="close-icon-container">
-                <i class="fa-solid fa-x"></i>
+                <i class="fa-solid fa-x" id="close-icon"></i>
             </div>
 
             <div class="modal-title-container">
@@ -71,7 +71,6 @@
             </div>
         </div>
     </div>
-
     
     <script src="./index.js"></script>
 </body>
