--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </div>
 
 
-    <div class="items-section" id="items-section">
+    <div class="items-section" id="items-section" >
         <!-- <div class="research-item">
             <div class="title-and-delete-container">
-                <a href="#">Website For NASA Data</a>
+                <a href="#" target="_blank">Website For NASA Data</a>
                 <i class="fa-solid fa-trash"></i>
             </div>
 
